# kamesh-demo-skills

./: .gitignore  CITATION.cff  NOTICE  README.md  Taskfile.yml
example-manifests/: hirc-duckdb-demo-manifest.md  smart-crowd-counter-manifest.md
hirc-duckdb-demo/: .env.example  README.md  SKILL.md  pyproject.toml  workbook.ipynb
hirc-duckdb-demo/hirc_demo/: __init__.py  cli.py
hirc-duckdb-demo/sql/: cleanup.sql  demo.sql  demo_setup.sql  rbac.sql  revoke_rbac.sql  sample_data.sql
smart-crowd-counter/: .env.example  README.md  SKILL.md  pyproject.toml
smart-crowd-counter/app/: environment.yml  snowflake.yml.template  streamlit_app.py
smart-crowd-counter/smart_crowd_counter/: __init__.py  cli.py
smart-crowd-counter/sql/: cleanup.sql  cleanup_role.sql  create_role.sql  create_warehouse.sql  setup.sql
