[project]
name = "smart-crowd-counter"
version = "0.1.0"
description = "Streamlit app for conference photo analysis using Snowflake Cortex AISQL"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0.0",
    "python-dotenv>=1.0.0",
    "snowflake-cli>=3.14.0",
]

[project.scripts]
scc-create-role = "smart_crowd_counter.cli:create_role"
scc-setup = "smart_crowd_counter.cli:setup"
scc-create-warehouse = "smart_crowd_counter.cli:create_warehouse"
scc-cleanup = "smart_crowd_counter.cli:cleanup"
scc-cleanup-role = "smart_crowd_counter.cli:cleanup_role"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["smart_crowd_counter"]
